// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SVG snapshots > agenda 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="960" height="540" viewBox="0 0 960 540" font-family="Segoe UI, Arial, sans-serif">
<text x="86.4" y="76.6" font-size="28" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="agenda-title">Agenda</text>
<line x1="86.4" y1="99" x2="873.6" y2="99" stroke="#e1e0d9" stroke-width="1" data-name="agenda-rule"/>
<rect x="76.4" y="145.68" width="807.2" height="41.4" fill="#eaf2fc" data-name="agenda-hl-0"/>
<text x="86.4" y="173.78" font-size="18" fill="#2a78d6" text-anchor="start" font-weight="600" data-name="agenda-num-0">1</text>
<text x="133.2" y="173.78" font-size="18" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="agenda-item-0">Intro</text>
<text x="86.4" y="219.78" font-size="18" fill="#52514e" text-anchor="start" font-weight="600" data-name="agenda-num-1">2</text>
<text x="133.2" y="219.78" font-size="18" fill="#52514e" text-anchor="start" data-name="agenda-item-1">Main</text>
</svg>"
`;

exports[`SVG snapshots > checkbox states 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" font-family="Segoe UI, Arial, sans-serif">
<rect x="0.5" y="0.5" width="19" height="19" fill="#ffffff" stroke="#0ca30c" stroke-width="1.5" data-name="check-box"/>
<text x="10" y="14.46" font-size="12.4" fill="#0ca30c" text-anchor="middle" font-weight="600" data-name="check-glyph">✓</text>
</svg>"
`;

exports[`SVG snapshots > checkbox states 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" font-family="Segoe UI, Arial, sans-serif">
<rect x="0.5" y="0.5" width="19" height="19" fill="#ffffff" stroke="#898781" stroke-width="1.5" data-name="check-box"/>
<text x="10" y="14.46" font-size="12.4" fill="#898781" text-anchor="middle" font-weight="600" data-name="check-glyph">–</text>
</svg>"
`;

exports[`SVG snapshots > harvey ball 75% 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" font-family="Segoe UI, Arial, sans-serif">
<ellipse cx="12" cy="12" rx="10.5" ry="10.5" fill="#ffffff" stroke="#0b0b0b" stroke-width="1.25" data-name="harvey-ring"/>
<path d="M 12 12 L 12 3 A 9 9 0 1 1 3 12 Z" fill="#0b0b0b" data-name="harvey-fill"/>
</svg>"
`;

exports[`SVG snapshots > process flow 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="40" viewBox="0 0 480 40" font-family="Segoe UI, Arial, sans-serif">
<path d="M 0 0 L 156.27 0 L 167.47 20 L 156.27 40 L 0 40 Z" fill="#dcdbd2" data-name="step-0"/>
<text x="83.73" y="23.96" font-size="11" fill="#0b0b0b" text-anchor="middle" data-name="step-label-0">Scope</text>
<path d="M 156.27 0 L 167.47 20 L 156.27 40 L 156.27 40 L 312.53 40 L 323.73 20 L 312.53 0 Z" fill="#2a78d6" data-name="step-1"/>
<text x="240" y="23.96" font-size="11" fill="#ffffff" text-anchor="middle" font-weight="600" data-name="step-label-1">Build</text>
<path d="M 312.53 0 L 323.73 20 L 312.53 40 L 312.53 40 L 468.8 40 L 480 20 L 468.8 0 Z" fill="#dcdbd2" data-name="step-2"/>
<text x="396.27" y="23.96" font-size="11" fill="#0b0b0b" text-anchor="middle" data-name="step-label-2">Launch</text>
</svg>"
`;

exports[`SVG snapshots > sample area 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Active users</text>
<line x1="34" y1="198" x2="426.2" y2="198" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<line x1="34" y1="114" x2="426.2" y2="114" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<line x1="34" y1="30" x2="426.2" y2="30" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<text x="30" y="285.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">0</text>
<text x="30" y="201.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">50</text>
<text x="30" y="117.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">100</text>
<text x="30" y="33.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">150</text>
<text x="73.22" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">2021</text>
<text x="151.66" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">2022</text>
<text x="230.1" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">2023</text>
<text x="308.54" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">2024</text>
<text x="386.98" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-4">2025</text>
<rect x="73.22" y="247.98" width="3.77" height="34.02" fill="#2a78d6" data-name="area-0-0-0"/>
<rect x="76.49" y="247.14" width="3.77" height="34.86" fill="#2a78d6" data-name="area-0-0-1"/>
<rect x="79.76" y="246.3" width="3.77" height="35.7" fill="#2a78d6" data-name="area-0-0-2"/>
<rect x="83.03" y="245.46" width="3.77" height="36.54" fill="#2a78d6" data-name="area-0-0-3"/>
<rect x="86.29" y="244.62" width="3.77" height="37.38" fill="#2a78d6" data-name="area-0-0-4"/>
<rect x="89.56" y="243.78" width="3.77" height="38.22" fill="#2a78d6" data-name="area-0-0-5"/>
<rect x="92.83" y="242.94" width="3.77" height="39.06" fill="#2a78d6" data-name="area-0-0-6"/>
<rect x="96.1" y="242.1" width="3.77" height="39.9" fill="#2a78d6" data-name="area-0-0-7"/>
<rect x="99.37" y="241.26" width="3.77" height="40.74" fill="#2a78d6" data-name="area-0-0-8"/>
<rect x="102.64" y="240.42" width="3.77" height="41.58" fill="#2a78d6" data-name="area-0-0-9"/>
<rect x="105.9" y="239.58" width="3.77" height="42.42" fill="#2a78d6" data-name="area-0-0-10"/>
<rect x="109.17" y="238.74" width="3.77" height="43.26" fill="#2a78d6" data-name="area-0-0-11"/>
<rect x="112.44" y="237.9" width="3.77" height="44.1" fill="#2a78d6" data-name="area-0-0-12"/>
<rect x="115.71" y="237.06" width="3.77" height="44.94" fill="#2a78d6" data-name="area-0-0-13"/>
<rect x="118.98" y="236.22" width="3.77" height="45.78" fill="#2a78d6" data-name="area-0-0-14"/>
<rect x="122.25" y="235.38" width="3.77" height="46.62" fill="#2a78d6" data-name="area-0-0-15"/>
<rect x="125.51" y="234.54" width="3.77" height="47.46" fill="#2a78d6" data-name="area-0-0-16"/>
<rect x="128.78" y="233.7" width="3.77" height="48.3" fill="#2a78d6" data-name="area-0-0-17"/>
<rect x="132.05" y="232.86" width="3.77" height="49.14" fill="#2a78d6" data-name="area-0-0-18"/>
<rect x="135.32" y="232.02" width="3.77" height="49.98" fill="#2a78d6" data-name="area-0-0-19"/>
<rect x="138.59" y="231.18" width="3.77" height="50.82" fill="#2a78d6" data-name="area-0-0-20"/>
<rect x="141.85" y="230.34" width="3.77" height="51.66" fill="#2a78d6" data-name="area-0-0-21"/>
<rect x="145.12" y="229.5" width="3.77" height="52.5" fill="#2a78d6" data-name="area-0-0-22"/>
<rect x="148.39" y="228.66" width="3.77" height="53.34" fill="#2a78d6" data-name="area-0-0-23"/>
<rect x="151.66" y="227.79" width="3.77" height="54.22" fill="#2a78d6" data-name="area-0-1-0"/>
<rect x="154.93" y="226.88" width="3.77" height="55.13" fill="#2a78d6" data-name="area-0-1-1"/>
<rect x="158.2" y="225.97" width="3.77" height="56.04" fill="#2a78d6" data-name="area-0-1-2"/>
<rect x="161.47" y="225.06" width="3.77" height="56.94" fill="#2a78d6" data-name="area-0-1-3"/>
<rect x="164.73" y="224.15" width="3.77" height="57.85" fill="#2a78d6" data-name="area-0-1-4"/>
<rect x="168" y="223.24" width="3.77" height="58.76" fill="#2a78d6" data-name="area-0-1-5"/>
<rect x="171.27" y="222.33" width="3.77" height="59.67" fill="#2a78d6" data-name="area-0-1-6"/>
<rect x="174.54" y="221.42" width="3.77" height="60.58" fill="#2a78d6" data-name="area-0-1-7"/>
<rect x="177.81" y="220.51" width="3.77" height="61.5" fill="#2a78d6" data-name="area-0-1-8"/>
<rect x="181.08" y="219.6" width="3.77" height="62.41" fill="#2a78d6" data-name="area-0-1-9"/>
<rect x="184.34" y="218.69" width="3.77" height="63.32" fill="#2a78d6" data-name="area-0-1-10"/>
<rect x="187.61" y="217.78" width="3.77" height="64.22" fill="#2a78d6" data-name="area-0-1-11"/>
<rect x="190.88" y="216.87" width="3.77" height="65.13" fill="#2a78d6" data-name="area-0-1-12"/>
<rect x="194.15" y="215.96" width="3.77" height="66.04" fill="#2a78d6" data-name="area-0-1-13"/>
<rect x="197.42" y="215.05" width="3.77" height="66.95" fill="#2a78d6" data-name="area-0-1-14"/>
<rect x="200.69" y="214.14" width="3.77" height="67.86" fill="#2a78d6" data-name="area-0-1-15"/>
<rect x="203.95" y="213.23" width="3.77" height="68.78" fill="#2a78d6" data-name="area-0-1-16"/>
<rect x="207.22" y="212.32" width="3.77" height="69.69" fill="#2a78d6" data-name="area-0-1-17"/>
<rect x="210.49" y="211.41" width="3.77" height="70.6" fill="#2a78d6" data-name="area-0-1-18"/>
<rect x="213.76" y="210.5" width="3.77" height="71.51" fill="#2a78d6" data-name="area-0-1-19"/>
<rect x="217.03" y="209.59" width="3.77" height="72.41" fill="#2a78d6" data-name="area-0-1-20"/>
<rect x="220.3" y="208.68" width="3.77" height="73.32" fill="#2a78d6" data-name="area-0-1-21"/>
<rect x="223.56" y="207.77" width="3.77" height="74.23" fill="#2a78d6" data-name="area-0-1-22"/>
<rect x="226.83" y="206.86" width="3.77" height="75.14" fill="#2a78d6" data-name="area-0-1-23"/>
<rect x="230.1" y="205.88" width="3.77" height="76.13" fill="#2a78d6" data-name="area-0-2-0"/>
<rect x="233.37" y="204.83" width="3.77" height="77.17" fill="#2a78d6" data-name="area-0-2-1"/>
<rect x="236.64" y="203.78" width="3.77" height="78.22" fill="#2a78d6" data-name="area-0-2-2"/>
<rect x="239.91" y="202.73" width="3.77" height="79.28" fill="#2a78d6" data-name="area-0-2-3"/>
<rect x="243.17" y="201.68" width="3.77" height="80.32" fill="#2a78d6" data-name="area-0-2-4"/>
<rect x="246.44" y="200.63" width="3.77" height="81.38" fill="#2a78d6" data-name="area-0-2-5"/>
<rect x="249.71" y="199.58" width="3.77" height="82.43" fill="#2a78d6" data-name="area-0-2-6"/>
<rect x="252.98" y="198.53" width="3.77" height="83.48" fill="#2a78d6" data-name="area-0-2-7"/>
<rect x="256.25" y="197.48" width="3.77" height="84.53" fill="#2a78d6" data-name="area-0-2-8"/>
<rect x="259.52" y="196.43" width="3.77" height="85.57" fill="#2a78d6" data-name="area-0-2-9"/>
<rect x="262.78" y="195.38" width="3.77" height="86.63" fill="#2a78d6" data-name="area-0-2-10"/>
<rect x="266.05" y="194.33" width="3.77" height="87.68" fill="#2a78d6" data-name="area-0-2-11"/>
<rect x="269.32" y="193.28" width="3.77" height="88.73" fill="#2a78d6" data-name="area-0-2-12"/>
<rect x="272.59" y="192.23" width="3.77" height="89.78" fill="#2a78d6" data-name="area-0-2-13"/>
<rect x="275.86" y="191.18" width="3.77" height="90.82" fill="#2a78d6" data-name="area-0-2-14"/>
<rect x="279.13" y="190.13" width="3.77" height="91.88" fill="#2a78d6" data-name="area-0-2-15"/>
<rect x="282.39" y="189.08" width="3.77" height="92.93" fill="#2a78d6" data-name="area-0-2-16"/>
<rect x="285.66" y="188.03" width="3.77" height="93.98" fill="#2a78d6" data-name="area-0-2-17"/>
<rect x="288.93" y="186.98" width="3.77" height="95.03" fill="#2a78d6" data-name="area-0-2-18"/>
<rect x="292.2" y="185.93" width="3.77" height="96.08" fill="#2a78d6" data-name="area-0-2-19"/>
<rect x="295.47" y="184.88" width="3.77" height="97.13" fill="#2a78d6" data-name="area-0-2-20"/>
<rect x="298.73" y="183.83" width="3.77" height="98.18" fill="#2a78d6" data-name="area-0-2-21"/>
<rect x="302" y="182.77" width="3.77" height="99.23" fill="#2a78d6" data-name="area-0-2-22"/>
<rect x="305.27" y="181.73" width="3.77" height="100.28" fill="#2a78d6" data-name="area-0-2-23"/>
<rect x="308.54" y="180.71" width="3.77" height="101.29" fill="#2a78d6" data-name="area-0-3-0"/>
<rect x="311.81" y="179.73" width="3.77" height="102.27" fill="#2a78d6" data-name="area-0-3-1"/>
<rect x="315.08" y="178.75" width="3.77" height="103.25" fill="#2a78d6" data-name="area-0-3-2"/>
<rect x="318.34" y="177.77" width="3.77" height="104.23" fill="#2a78d6" data-name="area-0-3-3"/>
<rect x="321.61" y="176.79" width="3.77" height="105.21" fill="#2a78d6" data-name="area-0-3-4"/>
<rect x="324.88" y="175.81" width="3.77" height="106.19" fill="#2a78d6" data-name="area-0-3-5"/>
<rect x="328.15" y="174.83" width="3.77" height="107.17" fill="#2a78d6" data-name="area-0-3-6"/>
<rect x="331.42" y="173.85" width="3.77" height="108.15" fill="#2a78d6" data-name="area-0-3-7"/>
<rect x="334.69" y="172.87" width="3.77" height="109.13" fill="#2a78d6" data-name="area-0-3-8"/>
<rect x="337.96" y="171.89" width="3.77" height="110.11" fill="#2a78d6" data-name="area-0-3-9"/>
<rect x="341.22" y="170.91" width="3.77" height="111.09" fill="#2a78d6" data-name="area-0-3-10"/>
<rect x="344.49" y="169.93" width="3.77" height="112.07" fill="#2a78d6" data-name="area-0-3-11"/>
<rect x="347.76" y="168.95" width="3.77" height="113.05" fill="#2a78d6" data-name="area-0-3-12"/>
<rect x="351.03" y="167.97" width="3.77" height="114.03" fill="#2a78d6" data-name="area-0-3-13"/>
<rect x="354.3" y="166.99" width="3.77" height="115.01" fill="#2a78d6" data-name="area-0-3-14"/>
<rect x="357.57" y="166.01" width="3.77" height="115.99" fill="#2a78d6" data-name="area-0-3-15"/>
<rect x="360.83" y="165.03" width="3.77" height="116.97" fill="#2a78d6" data-name="area-0-3-16"/>
<rect x="364.1" y="164.05" width="3.77" height="117.95" fill="#2a78d6" data-name="area-0-3-17"/>
<rect x="367.37" y="163.07" width="3.77" height="118.93" fill="#2a78d6" data-name="area-0-3-18"/>
<rect x="370.64" y="162.09" width="3.77" height="119.91" fill="#2a78d6" data-name="area-0-3-19"/>
<rect x="373.91" y="161.11" width="3.77" height="120.89" fill="#2a78d6" data-name="area-0-3-20"/>
<rect x="377.18" y="160.13" width="3.77" height="121.87" fill="#2a78d6" data-name="area-0-3-21"/>
<rect x="380.44" y="159.15" width="3.77" height="122.85" fill="#2a78d6" data-name="area-0-3-22"/>
<rect x="383.71" y="158.17" width="3.77" height="123.83" fill="#2a78d6" data-name="area-0-3-23"/>
<rect x="73.22" y="189.11" width="3.77" height="58.87" fill="#1baf7a" data-name="area-1-0-0"/>
<rect x="76.49" y="188.13" width="3.77" height="59.01" fill="#1baf7a" data-name="area-1-0-1"/>
<rect x="79.76" y="187.15" width="3.77" height="59.15" fill="#1baf7a" data-name="area-1-0-2"/>
<rect x="83.03" y="186.17" width="3.77" height="59.29" fill="#1baf7a" data-name="area-1-0-3"/>
<rect x="86.29" y="185.19" width="3.77" height="59.43" fill="#1baf7a" data-name="area-1-0-4"/>
<rect x="89.56" y="184.21" width="3.77" height="59.57" fill="#1baf7a" data-name="area-1-0-5"/>
<rect x="92.83" y="183.23" width="3.77" height="59.71" fill="#1baf7a" data-name="area-1-0-6"/>
<rect x="96.1" y="182.25" width="3.77" height="59.85" fill="#1baf7a" data-name="area-1-0-7"/>
<rect x="99.37" y="181.27" width="3.77" height="59.99" fill="#1baf7a" data-name="area-1-0-8"/>
<rect x="102.64" y="180.29" width="3.77" height="60.13" fill="#1baf7a" data-name="area-1-0-9"/>
<rect x="105.9" y="179.31" width="3.77" height="60.27" fill="#1baf7a" data-name="area-1-0-10"/>
<rect x="109.17" y="178.33" width="3.77" height="60.41" fill="#1baf7a" data-name="area-1-0-11"/>
<rect x="112.44" y="177.35" width="3.77" height="60.55" fill="#1baf7a" data-name="area-1-0-12"/>
<rect x="115.71" y="176.37" width="3.77" height="60.69" fill="#1baf7a" data-name="area-1-0-13"/>
<rect x="118.98" y="175.39" width="3.77" height="60.83" fill="#1baf7a" data-name="area-1-0-14"/>
<rect x="122.25" y="174.41" width="3.77" height="60.97" fill="#1baf7a" data-name="area-1-0-15"/>
<rect x="125.51" y="173.43" width="3.77" height="61.11" fill="#1baf7a" data-name="area-1-0-16"/>
<rect x="128.78" y="172.45" width="3.77" height="61.25" fill="#1baf7a" data-name="area-1-0-17"/>
<rect x="132.05" y="171.47" width="3.77" height="61.39" fill="#1baf7a" data-name="area-1-0-18"/>
<rect x="135.32" y="170.49" width="3.77" height="61.53" fill="#1baf7a" data-name="area-1-0-19"/>
<rect x="138.59" y="169.51" width="3.77" height="61.67" fill="#1baf7a" data-name="area-1-0-20"/>
<rect x="141.85" y="168.53" width="3.77" height="61.81" fill="#1baf7a" data-name="area-1-0-21"/>
<rect x="145.12" y="167.55" width="3.77" height="61.95" fill="#1baf7a" data-name="area-1-0-22"/>
<rect x="148.39" y="166.57" width="3.77" height="62.09" fill="#1baf7a" data-name="area-1-0-23"/>
<rect x="151.66" y="165.66" width="3.77" height="62.13" fill="#1baf7a" data-name="area-1-1-0"/>
<rect x="154.93" y="164.82" width="3.77" height="62.06" fill="#1baf7a" data-name="area-1-1-1"/>
<rect x="158.2" y="163.98" width="3.77" height="61.99" fill="#1baf7a" data-name="area-1-1-2"/>
<rect x="161.47" y="163.14" width="3.77" height="61.92" fill="#1baf7a" data-name="area-1-1-3"/>
<rect x="164.73" y="162.3" width="3.77" height="61.85" fill="#1baf7a" data-name="area-1-1-4"/>
<rect x="168" y="161.46" width="3.77" height="61.78" fill="#1baf7a" data-name="area-1-1-5"/>
<rect x="171.27" y="160.62" width="3.77" height="61.71" fill="#1baf7a" data-name="area-1-1-6"/>
<rect x="174.54" y="159.78" width="3.77" height="61.64" fill="#1baf7a" data-name="area-1-1-7"/>
<rect x="177.81" y="158.94" width="3.77" height="61.57" fill="#1baf7a" data-name="area-1-1-8"/>
<rect x="181.08" y="158.1" width="3.77" height="61.5" fill="#1baf7a" data-name="area-1-1-9"/>
<rect x="184.34" y="157.26" width="3.77" height="61.43" fill="#1baf7a" data-name="area-1-1-10"/>
<rect x="187.61" y="156.42" width="3.77" height="61.36" fill="#1baf7a" data-name="area-1-1-11"/>
<rect x="190.88" y="155.58" width="3.77" height="61.29" fill="#1baf7a" data-name="area-1-1-12"/>
<rect x="194.15" y="154.74" width="3.77" height="61.22" fill="#1baf7a" data-name="area-1-1-13"/>
<rect x="197.42" y="153.9" width="3.77" height="61.15" fill="#1baf7a" data-name="area-1-1-14"/>
<rect x="200.69" y="153.06" width="3.77" height="61.08" fill="#1baf7a" data-name="area-1-1-15"/>
<rect x="203.95" y="152.22" width="3.77" height="61.01" fill="#1baf7a" data-name="area-1-1-16"/>
<rect x="207.22" y="151.38" width="3.77" height="60.94" fill="#1baf7a" data-name="area-1-1-17"/>
<rect x="210.49" y="150.54" width="3.77" height="60.87" fill="#1baf7a" data-name="area-1-1-18"/>
<rect x="213.76" y="149.7" width="3.77" height="60.8" fill="#1baf7a" data-name="area-1-1-19"/>
<rect x="217.03" y="148.86" width="3.77" height="60.73" fill="#1baf7a" data-name="area-1-1-20"/>
<rect x="220.3" y="148.02" width="3.77" height="60.66" fill="#1baf7a" data-name="area-1-1-21"/>
<rect x="223.56" y="147.18" width="3.77" height="60.59" fill="#1baf7a" data-name="area-1-1-22"/>
<rect x="226.83" y="146.34" width="3.77" height="60.52" fill="#1baf7a" data-name="area-1-1-23"/>
<rect x="230.1" y="145.46" width="3.77" height="60.41" fill="#1baf7a" data-name="area-1-2-0"/>
<rect x="233.37" y="144.55" width="3.77" height="60.27" fill="#1baf7a" data-name="area-1-2-1"/>
<rect x="236.64" y="143.64" width="3.77" height="60.13" fill="#1baf7a" data-name="area-1-2-2"/>
<rect x="239.91" y="142.73" width="3.77" height="59.99" fill="#1baf7a" data-name="area-1-2-3"/>
<rect x="243.17" y="141.82" width="3.77" height="59.85" fill="#1baf7a" data-name="area-1-2-4"/>
<rect x="246.44" y="140.92" width="3.77" height="59.71" fill="#1baf7a" data-name="area-1-2-5"/>
<rect x="249.71" y="140.01" width="3.77" height="59.57" fill="#1baf7a" data-name="area-1-2-6"/>
<rect x="252.98" y="139.1" width="3.77" height="59.43" fill="#1baf7a" data-name="area-1-2-7"/>
<rect x="256.25" y="138.18" width="3.77" height="59.29" fill="#1baf7a" data-name="area-1-2-8"/>
<rect x="259.52" y="137.27" width="3.77" height="59.15" fill="#1baf7a" data-name="area-1-2-9"/>
<rect x="262.78" y="136.36" width="3.77" height="59.01" fill="#1baf7a" data-name="area-1-2-10"/>
<rect x="266.05" y="135.45" width="3.77" height="58.87" fill="#1baf7a" data-name="area-1-2-11"/>
<rect x="269.32" y="134.54" width="3.77" height="58.73" fill="#1baf7a" data-name="area-1-2-12"/>
<rect x="272.59" y="133.64" width="3.77" height="58.59" fill="#1baf7a" data-name="area-1-2-13"/>
<rect x="275.86" y="132.73" width="3.77" height="58.45" fill="#1baf7a" data-name="area-1-2-14"/>
<rect x="279.13" y="131.82" width="3.77" height="58.31" fill="#1baf7a" data-name="area-1-2-15"/>
<rect x="282.39" y="130.9" width="3.77" height="58.17" fill="#1baf7a" data-name="area-1-2-16"/>
<rect x="285.66" y="129.99" width="3.77" height="58.03" fill="#1baf7a" data-name="area-1-2-17"/>
<rect x="288.93" y="129.08" width="3.77" height="57.89" fill="#1baf7a" data-name="area-1-2-18"/>
<rect x="292.2" y="128.17" width="3.77" height="57.75" fill="#1baf7a" data-name="area-1-2-19"/>
<rect x="295.47" y="127.26" width="3.77" height="57.61" fill="#1baf7a" data-name="area-1-2-20"/>
<rect x="298.73" y="126.35" width="3.77" height="57.47" fill="#1baf7a" data-name="area-1-2-21"/>
<rect x="302" y="125.45" width="3.77" height="57.33" fill="#1baf7a" data-name="area-1-2-22"/>
<rect x="305.27" y="124.53" width="3.77" height="57.19" fill="#1baf7a" data-name="area-1-2-23"/>
<rect x="308.54" y="123.73" width="3.77" height="56.98" fill="#1baf7a" data-name="area-1-3-0"/>
<rect x="311.81" y="123.03" width="3.77" height="56.7" fill="#1baf7a" data-name="area-1-3-1"/>
<rect x="315.08" y="122.33" width="3.77" height="56.42" fill="#1baf7a" data-name="area-1-3-2"/>
<rect x="318.34" y="121.63" width="3.77" height="56.14" fill="#1baf7a" data-name="area-1-3-3"/>
<rect x="321.61" y="120.93" width="3.77" height="55.86" fill="#1baf7a" data-name="area-1-3-4"/>
<rect x="324.88" y="120.23" width="3.77" height="55.58" fill="#1baf7a" data-name="area-1-3-5"/>
<rect x="328.15" y="119.53" width="3.77" height="55.3" fill="#1baf7a" data-name="area-1-3-6"/>
<rect x="331.42" y="118.83" width="3.77" height="55.02" fill="#1baf7a" data-name="area-1-3-7"/>
<rect x="334.69" y="118.13" width="3.77" height="54.74" fill="#1baf7a" data-name="area-1-3-8"/>
<rect x="337.96" y="117.43" width="3.77" height="54.46" fill="#1baf7a" data-name="area-1-3-9"/>
<rect x="341.22" y="116.73" width="3.77" height="54.18" fill="#1baf7a" data-name="area-1-3-10"/>
<rect x="344.49" y="116.03" width="3.77" height="53.9" fill="#1baf7a" data-name="area-1-3-11"/>
<rect x="347.76" y="115.33" width="3.77" height="53.62" fill="#1baf7a" data-name="area-1-3-12"/>
<rect x="351.03" y="114.63" width="3.77" height="53.34" fill="#1baf7a" data-name="area-1-3-13"/>
<rect x="354.3" y="113.93" width="3.77" height="53.06" fill="#1baf7a" data-name="area-1-3-14"/>
<rect x="357.57" y="113.23" width="3.77" height="52.78" fill="#1baf7a" data-name="area-1-3-15"/>
<rect x="360.83" y="112.53" width="3.77" height="52.5" fill="#1baf7a" data-name="area-1-3-16"/>
<rect x="364.1" y="111.83" width="3.77" height="52.22" fill="#1baf7a" data-name="area-1-3-17"/>
<rect x="367.37" y="111.13" width="3.77" height="51.94" fill="#1baf7a" data-name="area-1-3-18"/>
<rect x="370.64" y="110.43" width="3.77" height="51.66" fill="#1baf7a" data-name="area-1-3-19"/>
<rect x="373.91" y="109.73" width="3.77" height="51.38" fill="#1baf7a" data-name="area-1-3-20"/>
<rect x="377.18" y="109.03" width="3.77" height="51.1" fill="#1baf7a" data-name="area-1-3-21"/>
<rect x="380.44" y="108.33" width="3.77" height="50.82" fill="#1baf7a" data-name="area-1-3-22"/>
<rect x="383.71" y="107.63" width="3.77" height="50.54" fill="#1baf7a" data-name="area-1-3-23"/>
<line x1="34" y1="282" x2="426.2" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="430.2" y="136.08" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">Desktop</text>
<text x="430.2" y="223.44" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">Mobile</text>
</svg>"
`;

exports[`SVG snapshots > sample bubble 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Market map</text>
<line x1="34" y1="284" x2="472" y2="284" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="287.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">0</text>
<line x1="34" y1="220" x2="472" y2="220" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="223.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">20</text>
<line x1="34" y1="156" x2="472" y2="156" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="159.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">40</text>
<line x1="34" y1="92" x2="472" y2="92" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="95.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">60</text>
<line x1="34" y1="28" x2="472" y2="28" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="31.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">80</text>
<text x="34" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">0</text>
<text x="143.5" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">20</text>
<text x="253" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">40</text>
<text x="362.5" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">60</text>
<text x="472" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">80</text>
<line x1="34" y1="284" x2="472" y2="284" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<line x1="34" y1="28" x2="34" y2="284" stroke="#a5a49e" stroke-width="1" data-name="y-axis-line"/>
<ellipse cx="99.7" cy="188" rx="7.68" ry="7.68" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="point-0"/>
<ellipse cx="170.88" cy="108" rx="15.36" ry="15.36" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="point-1"/>
<ellipse cx="253" cy="149.6" rx="23.04" ry="23.04" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="point-2"/>
<ellipse cx="335.13" cy="60" rx="12.14" ry="12.14" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="point-3"/>
<ellipse cx="373.45" cy="172" rx="18.01" ry="18.01" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="point-4"/>
<ellipse cx="439.15" cy="92" rx="20.32" ry="20.32" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="point-5"/>
<ellipse cx="198.25" cy="213.6" rx="9.41" ry="9.41" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="point-6"/>
<ellipse cx="296.8" cy="124" rx="14.37" ry="14.37" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="point-7"/>
<text x="278.04" y="153.2" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-2">Core</text>
<text x="377.03" y="95.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-5">Foxtrot</text>
<text x="393.46" y="175.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-4">Echo</text>
<text x="188.24" y="111.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-1">Bravo</text>
<text x="313.17" y="127.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-7">Hotel</text>
<text x="349.27" y="63.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-3">Delta</text>
<text x="209.66" y="217.2" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-6">Golf</text>
<text x="109.38" y="191.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-0">Alpha</text>
</svg>"
`;

exports[`SVG snapshots > sample butterfly 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Headcount by age band</text>
<text x="127.25" y="33.6" font-size="10" fill="#2a78d6" text-anchor="middle" font-weight="600" data-name="header-0">Women</text>
<text x="352.75" y="33.6" font-size="10" fill="#1baf7a" text-anchor="middle" font-weight="600" data-name="header-1">Men</text>
<text x="240" y="69.2" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">&lt;30</text>
<rect x="122.59" y="48.53" width="97.91" height="34.13" fill="#2a78d6" data-name="seg-0-0"/>
<text x="171.54" y="69.2" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-0">420</text>
<rect x="259.5" y="48.53" width="88.59" height="34.13" fill="#1baf7a" data-name="seg-1-0"/>
<text x="303.79" y="69.2" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-0">380</text>
<text x="240" y="120.4" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">30–39</text>
<rect x="78.29" y="99.73" width="142.21" height="34.13" fill="#2a78d6" data-name="seg-0-1"/>
<text x="149.4" y="120.4" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-1">610</text>
<rect x="259.5" y="99.73" width="151.53" height="34.13" fill="#1baf7a" data-name="seg-1-1"/>
<text x="335.27" y="120.4" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-1">650</text>
<text x="240" y="171.6" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">40–49</text>
<rect x="94.61" y="150.93" width="125.89" height="34.13" fill="#2a78d6" data-name="seg-0-2"/>
<text x="157.56" y="171.6" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-2">540</text>
<rect x="259.5" y="150.93" width="139.88" height="34.13" fill="#1baf7a" data-name="seg-1-2"/>
<text x="329.44" y="171.6" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-2">600</text>
<text x="240" y="222.8" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">50–59</text>
<rect x="145.9" y="202.13" width="74.6" height="34.13" fill="#2a78d6" data-name="seg-0-3"/>
<text x="183.2" y="222.8" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-3">320</text>
<rect x="259.5" y="202.13" width="95.58" height="34.13" fill="#1baf7a" data-name="seg-1-3"/>
<text x="307.29" y="222.8" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-3">410</text>
<text x="240" y="274" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-4">60+</text>
<rect x="192.53" y="253.33" width="27.98" height="34.13" fill="#2a78d6" data-name="seg-0-4"/>
<text x="206.51" y="274" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-4">120</text>
<rect x="259.5" y="253.33" width="37.3" height="34.13" fill="#1baf7a" data-name="seg-1-4"/>
<text x="278.15" y="274" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-4">160</text>
<line x1="220.5" y1="40" x2="220.5" y2="296" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<line x1="259.5" y1="40" x2="259.5" y2="296" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
</svg>"
`;

exports[`SVG snapshots > sample clustered 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Sales by quarter</text>
<text x="57.05" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">Q1</text>
<text x="167.15" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">Q2</text>
<text x="277.25" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">Q3</text>
<text x="387.35" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">Q4</text>
<rect x="20.85" y="149.7" width="35.7" height="132.3" fill="#2a78d6" stroke="#ffffff" stroke-width="0" data-name="seg-0-0"/>
<text x="38.7" y="219.45" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-0">42</text>
<rect x="57.55" y="121.35" width="35.7" height="160.65" fill="#1baf7a" stroke="#ffffff" stroke-width="0" data-name="seg-1-0"/>
<text x="75.4" y="205.28" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-0">51</text>
<rect x="130.95" y="130.8" width="35.7" height="151.2" fill="#2a78d6" stroke="#ffffff" stroke-width="0" data-name="seg-0-1"/>
<text x="148.8" y="210" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-1">48</text>
<rect x="167.65" y="108.75" width="35.7" height="173.25" fill="#1baf7a" stroke="#ffffff" stroke-width="0" data-name="seg-1-1"/>
<text x="185.5" y="198.98" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-1">55</text>
<rect x="241.05" y="140.25" width="35.7" height="141.75" fill="#2a78d6" stroke="#ffffff" stroke-width="0" data-name="seg-0-2"/>
<text x="258.9" y="214.73" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-2">45</text>
<rect x="277.75" y="99.3" width="35.7" height="182.7" fill="#1baf7a" stroke="#ffffff" stroke-width="0" data-name="seg-1-2"/>
<text x="295.6" y="194.25" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-2">58</text>
<rect x="351.15" y="89.85" width="35.7" height="192.15" fill="#2a78d6" stroke="#ffffff" stroke-width="0" data-name="seg-0-3"/>
<text x="369" y="189.53" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-3">61</text>
<rect x="387.85" y="61.5" width="35.7" height="220.5" fill="#1baf7a" stroke="#ffffff" stroke-width="0" data-name="seg-1-3"/>
<text x="405.7" y="175.35" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-3">70</text>
<line x1="2" y1="282" x2="442.4" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="446.4" y="175.35" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">2025</text>
<text x="446.4" y="189.53" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">2024</text>
</svg>"
`;

exports[`SVG snapshots > sample combo 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Revenue and margin</text>
<text x="54.35" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">2022</text>
<text x="159.05" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">2023</text>
<text x="263.75" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">2024</text>
<text x="368.45" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">2025</text>
<rect x="19.45" y="185.6" width="69.8" height="96.4" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-0"/>
<text x="54.35" y="237.4" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-0">40</text>
<rect x="19.45" y="142.22" width="69.8" height="43.38" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-0"/>
<text x="54.35" y="167.51" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-0">18</text>
<text x="54.35" y="139.22" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-0">58</text>
<rect x="124.15" y="171.14" width="69.8" height="110.86" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-1"/>
<text x="159.05" y="230.17" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-1">46</text>
<rect x="124.15" y="118.12" width="69.8" height="53.02" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-1"/>
<text x="159.05" y="148.23" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-1">22</text>
<text x="159.05" y="115.12" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-1">68</text>
<rect x="228.85" y="156.68" width="69.8" height="125.32" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-2"/>
<text x="263.75" y="222.94" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-2">52</text>
<rect x="228.85" y="91.61" width="69.8" height="65.07" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-2"/>
<text x="263.75" y="127.74" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-2">27</text>
<text x="263.75" y="88.61" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-2">79</text>
<rect x="333.55" y="137.4" width="69.8" height="144.6" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-3"/>
<text x="368.45" y="213.3" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-3">60</text>
<rect x="333.55" y="57.87" width="69.8" height="79.53" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-3"/>
<text x="368.45" y="101.23" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-3">33</text>
<text x="368.45" y="54.87" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-3">93</text>
<line x1="2" y1="282" x2="420.8" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="424.8" y="101.23" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">Services</text>
<text x="424.8" y="213.3" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">Product</text>
<rect x="51.95" y="204.89" width="4.8" height="4.8" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="combo-marker-0-0"/>
<text x="54.35" y="202.29" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="combo-label-0-0">31</text>
<line x1="54.35" y1="207.29" x2="159.05" y2="200.06" stroke="#eda100" stroke-width="2" data-name="combo-line-0-1"/>
<rect x="156.65" y="197.66" width="4.8" height="4.8" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="combo-marker-0-1"/>
<text x="159.05" y="195.06" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="combo-label-0-1">34</text>
<line x1="159.05" y1="200.06" x2="263.75" y2="190.42" stroke="#eda100" stroke-width="2" data-name="combo-line-0-2"/>
<rect x="261.35" y="188.02" width="4.8" height="4.8" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="combo-marker-0-2"/>
<text x="263.75" y="185.42" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="combo-label-0-2">38</text>
<line x1="263.75" y1="190.42" x2="368.45" y2="173.55" stroke="#eda100" stroke-width="2" data-name="combo-line-0-3"/>
<rect x="366.05" y="171.15" width="4.8" height="4.8" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="combo-marker-0-3"/>
<text x="368.45" y="168.55" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="combo-label-0-3">45</text>
<text x="424.8" y="168.15" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="combo-series-label-0">Margin %</text>
</svg>"
`;

exports[`SVG snapshots > sample doughnut 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Revenue split</text>
<path d="M 240 161 L 240 44 A 117 117 0 0 1 352.62 192.73 Z" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="slice-0"/>
<line x1="334.07" y1="89.77" x2="338.46" y2="86.45" stroke="#52514e" stroke-width="0.75" data-name="leader-0"/>
<text x="339.65" y="89.14" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-0">EMEA 29%</text>
<path d="M 240 161 L 352.62 192.73 A 117 117 0 0 1 134.67 211.93 Z" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="slice-1"/>
<line x1="250.36" y1="278.54" x2="250.84" y2="284.02" stroke="#52514e" stroke-width="0.75" data-name="leader-1"/>
<text x="250.97" y="289.12" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-1">Americas 38%</text>
<path d="M 240 161 L 134.67 211.93 A 117 117 0 0 1 185.63 57.4 Z" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="slice-2"/>
<line x1="127.94" y1="124.04" x2="122.71" y2="122.32" stroke="#52514e" stroke-width="0.75" data-name="leader-2"/>
<text x="121.29" y="125.45" font-size="10" fill="#0b0b0b" text-anchor="end" data-name="label-2">APAC 24%</text>
<path d="M 240 161 L 185.63 57.4 A 117 117 0 0 1 240 44 Z" fill="#008300" stroke="#ffffff" stroke-width="1" data-name="slice-3"/>
<line x1="211.76" y1="46.43" x2="210.44" y2="41.09" stroke="#52514e" stroke-width="0.75" data-name="leader-3"/>
<text x="210.09" y="43.23" font-size="10" fill="#0b0b0b" text-anchor="end" data-name="label-3">Other 8%</text>
<ellipse cx="240" cy="161" rx="64.35" ry="64.35" fill="#ffffff" data-name="hole"/>
<text x="240" y="165.68" font-size="13" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="hole-label">286</text>
</svg>"
`;

exports[`SVG snapshots > sample gantt 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Programme plan (weeks)</text>
<line x1="47.8" y1="38" x2="47.8" y2="294" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<text x="47.8" y="33.24" font-size="9" fill="#52514e" text-anchor="middle" data-name="timeline">0</text>
<line x1="189.87" y1="38" x2="189.87" y2="294" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<text x="189.87" y="33.24" font-size="9" fill="#52514e" text-anchor="middle" data-name="timeline">5</text>
<line x1="331.93" y1="38" x2="331.93" y2="294" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<text x="331.93" y="33.24" font-size="9" fill="#52514e" text-anchor="middle" data-name="timeline">10</text>
<line x1="474" y1="38" x2="474" y2="294" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<text x="474" y="33.24" font-size="9" fill="#52514e" text-anchor="middle" data-name="timeline">15</text>
<text x="0" y="67.2" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="category-0">Scoping</text>
<rect x="76.21" y="56.6" width="56.83" height="14" fill="#2a78d6" data-name="bar-0"/>
<text x="104.63" y="66.84" font-size="9" fill="#ffffff" text-anchor="middle" data-name="bar-label-0">1–3</text>
<text x="0" y="118.4" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="category-1">Design</text>
<line x1="47.8" y1="89.2" x2="474" y2="89.2" stroke="#e1e0d9" stroke-width="0.5" data-name="row-1"/>
<rect x="133.04" y="107.8" width="85.24" height="14" fill="#2a78d6" data-name="bar-1"/>
<text x="175.66" y="118.04" font-size="9" fill="#ffffff" text-anchor="middle" data-name="bar-label-1">3–6</text>
<ellipse cx="218.28" cy="114.8" rx="6.3" ry="6.3" fill="#0b0b0b" data-name="milestone-1"/>
<text x="0" y="169.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="category-2">Build</text>
<line x1="47.8" y1="140.4" x2="474" y2="140.4" stroke="#e1e0d9" stroke-width="0.5" data-name="row-2"/>
<rect x="189.87" y="159" width="170.48" height="14" fill="#2a78d6" data-name="bar-2"/>
<text x="275.11" y="169.24" font-size="9" fill="#ffffff" text-anchor="middle" data-name="bar-label-2">5–11</text>
<text x="0" y="220.8" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="category-3">Test</text>
<line x1="47.8" y1="191.6" x2="474" y2="191.6" stroke="#e1e0d9" stroke-width="0.5" data-name="row-3"/>
<rect x="331.93" y="210.2" width="85.24" height="14" fill="#2a78d6" data-name="bar-3"/>
<text x="374.55" y="220.44" font-size="9" fill="#ffffff" text-anchor="middle" data-name="bar-label-3">10–13</text>
<ellipse cx="417.17" cy="217.2" rx="6.3" ry="6.3" fill="#0b0b0b" data-name="milestone-3"/>
<text x="0" y="272" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="category-4">Rollout</text>
<line x1="47.8" y1="242.8" x2="474" y2="242.8" stroke="#e1e0d9" stroke-width="0.5" data-name="row-4"/>
<rect x="417.17" y="261.4" width="56.83" height="14" fill="#2a78d6" data-name="bar-4"/>
<text x="445.59" y="271.64" font-size="9" fill="#ffffff" text-anchor="middle" data-name="bar-label-4">13–15</text>
<ellipse cx="474" cy="268.4" rx="6.3" ry="6.3" fill="#0b0b0b" data-name="milestone-4"/>
</svg>"
`;

exports[`SVG snapshots > sample line 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Gross margin</text>
<line x1="34" y1="219" x2="426.2" y2="219" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<line x1="34" y1="156" x2="426.2" y2="156" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<line x1="34" y1="93" x2="426.2" y2="93" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<line x1="34" y1="30" x2="426.2" y2="30" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline"/>
<text x="30" y="285.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">0</text>
<text x="30" y="222.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">20</text>
<text x="30" y="159.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">40</text>
<text x="30" y="96.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">60</text>
<text x="30" y="33.24" font-size="9" fill="#52514e" text-anchor="end" data-name="value-axis">80</text>
<text x="73.22" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">2021</text>
<text x="151.66" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">2022</text>
<text x="230.1" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">2023</text>
<text x="308.54" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">2024</text>
<text x="386.98" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-4">2025</text>
<rect x="70.82" y="128.4" width="4.8" height="4.8" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="marker-0-0"/>
<line x1="73.22" y1="130.8" x2="151.66" y2="118.2" stroke="#2a78d6" stroke-width="2" data-name="line-0-1"/>
<rect x="149.26" y="115.8" width="4.8" height="4.8" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="marker-0-1"/>
<line x1="151.66" y1="118.2" x2="230.1" y2="108.75" stroke="#2a78d6" stroke-width="2" data-name="line-0-2"/>
<rect x="227.7" y="106.35" width="4.8" height="4.8" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="marker-0-2"/>
<line x1="230.1" y1="108.75" x2="308.54" y2="89.85" stroke="#2a78d6" stroke-width="2" data-name="line-0-3"/>
<rect x="306.14" y="87.45" width="4.8" height="4.8" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="marker-0-3"/>
<line x1="308.54" y1="89.85" x2="386.98" y2="74.1" stroke="#2a78d6" stroke-width="2" data-name="line-0-4"/>
<rect x="384.58" y="71.7" width="4.8" height="4.8" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="marker-0-4"/>
<rect x="70.82" y="153.6" width="4.8" height="4.8" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="marker-1-0"/>
<line x1="73.22" y1="156" x2="151.66" y2="149.7" stroke="#1baf7a" stroke-width="2" data-name="line-1-1"/>
<rect x="149.26" y="147.3" width="4.8" height="4.8" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="marker-1-1"/>
<line x1="151.66" y1="149.7" x2="230.1" y2="152.85" stroke="#1baf7a" stroke-width="2" data-name="line-1-2"/>
<rect x="227.7" y="150.45" width="4.8" height="4.8" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="marker-1-2"/>
<line x1="230.1" y1="152.85" x2="308.54" y2="140.25" stroke="#1baf7a" stroke-width="2" data-name="line-1-3"/>
<rect x="306.14" y="137.85" width="4.8" height="4.8" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="marker-1-3"/>
<line x1="308.54" y1="140.25" x2="386.98" y2="127.65" stroke="#1baf7a" stroke-width="2" data-name="line-1-4"/>
<rect x="384.58" y="125.25" width="4.8" height="4.8" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="marker-1-4"/>
<line x1="34" y1="282" x2="426.2" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="430.2" y="77.7" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">Brand A</text>
<text x="430.2" y="131.25" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">Brand B</text>
</svg>"
`;

exports[`SVG snapshots > sample mekko 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<rect x="2" y="161.5" width="128.55" height="120.5" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-0"/>
<text x="66.27" y="225.35" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-0">42</text>
<rect x="2" y="81.17" width="128.55" height="80.33" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-0"/>
<text x="66.27" y="124.93" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-0">28</text>
<rect x="2" y="41" width="128.55" height="40.17" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-0"/>
<text x="66.27" y="64.68" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-0">14</text>
<text x="66.27" y="38" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-0">84</text>
<rect x="132.55" y="161.5" width="168.33" height="120.5" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-1"/>
<text x="216.71" y="225.35" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-1">55</text>
<rect x="132.55" y="95.77" width="168.33" height="65.73" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-1"/>
<text x="216.71" y="132.24" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-1">30</text>
<rect x="132.55" y="41" width="168.33" height="54.77" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-1"/>
<text x="216.71" y="71.99" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-1">25</text>
<text x="216.71" y="38" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-1">110</text>
<rect x="302.88" y="220.03" width="107.12" height="61.97" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-2"/>
<text x="356.44" y="254.61" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-2">18</text>
<rect x="302.88" y="144.29" width="107.12" height="75.74" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-2"/>
<text x="356.44" y="185.76" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-2">22</text>
<rect x="302.88" y="41" width="107.12" height="103.29" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-2"/>
<text x="356.44" y="96.24" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-2">30</text>
<text x="356.44" y="38" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-2">70</text>
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Revenue by region and segment</text>
<text x="66.27" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">EMEA (32%)</text>
<text x="216.71" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">Americas (42%)</text>
<text x="356.44" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">APAC (27%)</text>
<line x1="2" y1="282" x2="410" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="414" y="96.24" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">Consumer</text>
<text x="414" y="185.76" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">SMB</text>
<text x="414" y="254.61" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-2">Enterprise</text>
</svg>"
`;

exports[`SVG snapshots > sample pie 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Revenue split</text>
<path d="M 240 161 L 240 44 A 117 117 0 0 1 352.62 192.73 Z" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="slice-0"/>
<text x="297.83" y="120.81" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0">EMEA 29%</text>
<path d="M 240 161 L 352.62 192.73 A 117 117 0 0 1 134.67 211.93 Z" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="slice-1"/>
<text x="246.37" y="236.86" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1">Americas 38%</text>
<path d="M 240 161 L 134.67 211.93 A 117 117 0 0 1 185.63 57.4 Z" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="slice-2"/>
<text x="171.11" y="141.88" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-2">APAC 24%</text>
<path d="M 240 161 L 185.63 57.4 A 117 117 0 0 1 240 44 Z" fill="#008300" stroke="#ffffff" stroke-width="1" data-name="slice-3"/>
<line x1="211.76" y1="46.43" x2="210.44" y2="41.09" stroke="#52514e" stroke-width="0.75" data-name="leader-3"/>
<text x="210.09" y="43.23" font-size="10" fill="#0b0b0b" text-anchor="end" data-name="label-3">Other 8%</text>
</svg>"
`;

exports[`SVG snapshots > sample scatter 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Price vs. margin</text>
<line x1="34" y1="284" x2="472" y2="284" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="287.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">0</text>
<line x1="34" y1="220" x2="472" y2="220" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="223.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">20</text>
<line x1="34" y1="156" x2="472" y2="156" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="159.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">40</text>
<line x1="34" y1="92" x2="472" y2="92" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="95.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">60</text>
<line x1="34" y1="28" x2="472" y2="28" stroke="#e1e0d9" stroke-width="0.75" data-name="gridline-y"/>
<text x="30" y="31.24" font-size="9" fill="#52514e" text-anchor="end" data-name="y-axis">80</text>
<text x="34" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">0</text>
<text x="143.5" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">20</text>
<text x="253" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">40</text>
<text x="362.5" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">60</text>
<text x="472" y="295" font-size="9" fill="#52514e" text-anchor="middle" data-name="x-axis">80</text>
<line x1="34" y1="284" x2="472" y2="284" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<line x1="34" y1="28" x2="34" y2="284" stroke="#a5a49e" stroke-width="1" data-name="y-axis-line"/>
<ellipse cx="99.7" cy="188" rx="3" ry="3" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="point-0"/>
<ellipse cx="170.88" cy="108" rx="3" ry="3" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="point-1"/>
<ellipse cx="253" cy="149.6" rx="3" ry="3" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="point-2"/>
<ellipse cx="335.13" cy="60" rx="3" ry="3" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="point-3"/>
<ellipse cx="373.45" cy="172" rx="3" ry="3" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="point-4"/>
<ellipse cx="439.15" cy="92" rx="3" ry="3" fill="#eda100" stroke="#ffffff" stroke-width="1" data-name="point-5"/>
<ellipse cx="198.25" cy="213.6" rx="3" ry="3" fill="#2a78d6" stroke="#ffffff" stroke-width="1" data-name="point-6"/>
<ellipse cx="296.8" cy="124" rx="3" ry="3" fill="#1baf7a" stroke="#ffffff" stroke-width="1" data-name="point-7"/>
<text x="104.7" y="191.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-0">Alpha</text>
<text x="175.88" y="111.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-1">Bravo</text>
<text x="258" y="153.2" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-2">Core</text>
<text x="340.13" y="63.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-3">Delta</text>
<text x="378.45" y="175.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-4">Echo</text>
<text x="394.35" y="95.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-5">Foxtrot</text>
<text x="203.25" y="217.2" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-6">Golf</text>
<text x="301.8" y="127.6" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="label-7">Hotel</text>
</svg>"
`;

exports[`SVG snapshots > sample stacked 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Revenue by segment</text>
<text x="53" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">2022</text>
<text x="155" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">2023</text>
<text x="257" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">2024</text>
<text x="359" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">2025</text>
<rect x="19" y="227.37" width="68" height="54.63" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-0"/>
<text x="53" y="258.29" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-0">34</text>
<rect x="19" y="192.03" width="68" height="35.35" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-0"/>
<text x="53" y="213.3" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-0">22</text>
<rect x="19" y="163.11" width="68" height="28.92" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-0"/>
<text x="53" y="181.17" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-0">18</text>
<text x="53" y="160.11" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-0">74</text>
<rect x="121" y="217.73" width="68" height="64.27" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-1"/>
<text x="155" y="253.47" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-1">40</text>
<rect x="121" y="175.96" width="68" height="41.77" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-1"/>
<text x="155" y="200.45" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-1">26</text>
<rect x="121" y="148.65" width="68" height="27.31" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-1"/>
<text x="155" y="165.9" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-1">17</text>
<text x="155" y="145.65" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-1">83</text>
<rect x="223" y="206.49" width="68" height="75.51" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-2"/>
<text x="257" y="247.84" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-2">47</text>
<rect x="223" y="156.68" width="68" height="49.81" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-2"/>
<text x="257" y="185.18" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-2">31</text>
<rect x="223" y="126.15" width="68" height="30.53" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-2"/>
<text x="257" y="145.02" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-2">19</text>
<text x="257" y="123.15" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-2">97</text>
<rect x="325" y="192.03" width="68" height="89.97" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-3"/>
<text x="359" y="240.61" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-3">56</text>
<rect x="325" y="135.79" width="68" height="56.23" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-3"/>
<text x="359" y="167.51" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-3">35</text>
<rect x="325" y="100.45" width="68" height="35.35" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-3"/>
<text x="359" y="121.72" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-3">22</text>
<text x="359" y="97.45" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="total-3">113</text>
<line x1="2" y1="282" x2="410" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="414" y="121.72" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">Consumer</text>
<text x="414" y="167.51" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">SMB</text>
<text x="414" y="240.61" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-2">Enterprise</text>
<line x1="53" y1="132.11" x2="359" y2="69.45" stroke="#0b0b0b" stroke-width="1.25" data-name="cagr-line"/>
<path d="M 0 0 L -9 -3.5 L -9 3.5 Z" fill="#0b0b0b" transform="translate(359 69.45) rotate(-11.57)" data-name="cagr-head"/>
<text x="206" y="64.95" font-size="10" fill="#0b0b0b" text-anchor="middle" font-weight="600" data-name="cagr-label">+15.2% p.a.</text>
</svg>"
`;

exports[`SVG snapshots > sample stacked100 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">Channel mix</text>
<text x="53.68" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">2022</text>
<text x="157.02" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">2023</text>
<text x="260.38" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">2024</text>
<text x="363.73" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">2025</text>
<rect x="19.23" y="143.4" width="68.9" height="138.6" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-0"/>
<text x="53.68" y="216.3" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-0">55%</text>
<rect x="19.23" y="67.8" width="68.9" height="75.6" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-0"/>
<text x="53.68" y="109.2" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-0">30%</text>
<rect x="19.23" y="30" width="68.9" height="37.8" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-0"/>
<text x="53.68" y="52.5" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-0">15%</text>
<rect x="122.57" y="158.52" width="68.9" height="123.48" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-1"/>
<text x="157.02" y="223.86" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-1">49%</text>
<rect x="122.57" y="67.8" width="68.9" height="90.72" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-1"/>
<text x="157.02" y="116.76" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-1">36%</text>
<rect x="122.57" y="30" width="68.9" height="37.8" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-1"/>
<text x="157.02" y="52.5" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-1">15%</text>
<rect x="225.93" y="171.12" width="68.9" height="110.88" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-2"/>
<text x="260.38" y="230.16" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-2">44%</text>
<rect x="225.93" y="67.8" width="68.9" height="103.32" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-2"/>
<text x="260.38" y="123.06" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-2">41%</text>
<rect x="225.93" y="30" width="68.9" height="37.8" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-2"/>
<text x="260.38" y="52.5" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-2">15%</text>
<rect x="329.28" y="186.24" width="68.9" height="95.76" fill="#2a78d6" stroke="#ffffff" stroke-width="0.75" data-name="seg-0-3"/>
<text x="363.73" y="237.72" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0-3">38%</text>
<rect x="329.28" y="67.8" width="68.9" height="118.44" fill="#1baf7a" stroke="#ffffff" stroke-width="0.75" data-name="seg-1-3"/>
<text x="363.73" y="130.62" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1-3">47%</text>
<rect x="329.28" y="30" width="68.9" height="37.8" fill="#eda100" stroke="#ffffff" stroke-width="0.75" data-name="seg-2-3"/>
<text x="363.73" y="52.5" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-2-3">15%</text>
<line x1="2" y1="282" x2="415.4" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
<text x="419.4" y="52.5" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-0">Wholesale</text>
<text x="419.4" y="130.62" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-1">Online</text>
<text x="419.4" y="237.72" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="series-label-2">Retail</text>
</svg>"
`;

exports[`SVG snapshots > sample waterfall 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="300" viewBox="0 0 480 300" font-family="Segoe UI, Arial, sans-serif">
<text x="0" y="12" font-size="12" fill="#0b0b0b" text-anchor="start" font-weight="600" data-name="title">EBITDA bridge</text>
<text x="41.5" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-0">FY23</text>
<text x="120.5" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-1">Volume</text>
<text x="199.5" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-2">Price</text>
<text x="278.5" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-3">Cost</text>
<text x="357.5" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-4">FX</text>
<text x="436.5" y="295" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="category-5">FY24</text>
<rect x="15.17" y="137.52" width="52.67" height="144.48" fill="#2a78d6" data-name="bar-0"/>
<text x="41.5" y="213.36" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-0">86</text>
<line x1="67.83" y1="137.52" x2="94.17" y2="137.52" stroke="#52514e" stroke-width="0.75" stroke-dasharray="1.5 1.5" data-name="connector-0"/>
<rect x="94.17" y="114" width="52.67" height="23.52" fill="#2a78d6" data-name="bar-1"/>
<text x="120.5" y="129.36" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-1">+14</text>
<line x1="146.83" y1="114" x2="173.17" y2="114" stroke="#52514e" stroke-width="0.75" stroke-dasharray="1.5 1.5" data-name="connector-1"/>
<rect x="173.17" y="98.88" width="52.67" height="15.12" fill="#2a78d6" data-name="bar-2"/>
<text x="199.5" y="110.04" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-2">+9</text>
<line x1="225.83" y1="98.88" x2="252.17" y2="98.88" stroke="#52514e" stroke-width="0.75" stroke-dasharray="1.5 1.5" data-name="connector-2"/>
<rect x="252.17" y="98.88" width="52.67" height="20.16" fill="#e34948" data-name="bar-3"/>
<text x="278.5" y="112.56" font-size="10" fill="#ffffff" text-anchor="middle" data-name="label-3">-12</text>
<line x1="304.83" y1="119.04" x2="331.17" y2="119.04" stroke="#52514e" stroke-width="0.75" stroke-dasharray="1.5 1.5" data-name="connector-3"/>
<rect x="331.17" y="119.04" width="52.67" height="6.72" fill="#e34948" data-name="bar-4"/>
<text x="357.5" y="115.64" font-size="10" fill="#0b0b0b" text-anchor="middle" data-name="label-4">-4</text>
<line x1="383.83" y1="125.76" x2="410.17" y2="125.76" stroke="#52514e" stroke-width="0.75" stroke-dasharray="1.5 1.5" data-name="connector-4"/>
<rect x="410.17" y="125.76" width="52.67" height="156.24" fill="#898781" data-name="bar-5"/>
<text x="436.5" y="207.48" font-size="10" fill="#ffffff" text-anchor="middle" font-weight="600" data-name="label-5">93</text>
<line x1="2" y1="282" x2="476" y2="282" stroke="#a5a49e" stroke-width="1" data-name="baseline"/>
</svg>"
`;

exports[`SVG snapshots > table 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="480" height="42" viewBox="0 0 480 42" font-family="Segoe UI, Arial, sans-serif">
<rect x="0" y="0" width="204.31" height="21" fill="#2a78d6" stroke="#e1e0d9" stroke-width="0.75" data-name="cell-0-0"/>
<text x="5" y="14.1" font-size="10" fill="#ffffff" text-anchor="start" font-weight="600" data-name="cell-text-0-0"></text>
<rect x="204.31" y="0" width="137.85" height="21" fill="#2a78d6" stroke="#e1e0d9" stroke-width="0.75" data-name="cell-0-1"/>
<text x="337.15" y="14.1" font-size="10" fill="#ffffff" text-anchor="end" font-weight="600" data-name="cell-text-0-1">2024</text>
<rect x="342.15" y="0" width="137.85" height="21" fill="#2a78d6" stroke="#e1e0d9" stroke-width="0.75" data-name="cell-0-2"/>
<text x="475" y="14.1" font-size="10" fill="#ffffff" text-anchor="end" font-weight="600" data-name="cell-text-0-2">2025</text>
<rect x="0" y="21" width="204.31" height="21" fill="#ffffff" stroke="#e1e0d9" stroke-width="0.75" data-name="cell-1-0"/>
<text x="5" y="35.1" font-size="10" fill="#0b0b0b" text-anchor="start" data-name="cell-text-1-0">Revenue</text>
<rect x="204.31" y="21" width="137.85" height="21" fill="#ffffff" stroke="#e1e0d9" stroke-width="0.75" data-name="cell-1-1"/>
<text x="337.15" y="35.1" font-size="10" fill="#0b0b0b" text-anchor="end" data-name="cell-text-1-1">78</text>
<rect x="342.15" y="21" width="137.85" height="21" fill="#ffffff" stroke="#e1e0d9" stroke-width="0.75" data-name="cell-1-2"/>
<text x="475" y="35.1" font-size="10" fill="#0b0b0b" text-anchor="end" data-name="cell-text-1-2">91</text>
</svg>"
`;
